# pushkind-hedwig

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  pushkind-emailer-check-reply.service  pushkind-emailer-send-email.service
.github/workflows/: deploy_dev.yml  docs.yml  test_pr.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: default.yaml  local.yaml
src/: domain.rs  errors.rs  lib.rs  models.rs
src/check_reply/: imap.rs  mod.rs  parser.rs  processor.rs  service.rs
src/repository/: email.rs  hub.rs  mod.rs
src/send_email/: message_builder.rs  mod.rs  service.rs
tests/: db.rs  repository.rs
tests/common/: mod.rs
