[package]
name = "pushkind-hedwig"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "send_email"

[[bin]]
name = "check_reply"

[dependencies]
rustls = { version = "0.23.32", features = ["aws-lc-rs"] }
tokio = { version = "1.47.1", features = ["full"] }
pushkind-common = { git = "https://github.com/pushkindt/pushkind-common.git", branch = "main", features = [
    "db",
    "zeromq",
    "emailer",
] }
mail-send = { version = "0.5.2" }
env_logger = "0.11.8"
log = "0.4.28"
serde_json = "1.0.145"
async-imap = { version = "0.11.1", default-features = false, features = [
    "runtime-tokio",
] }
dotenvy = "0.15.7"
zmq = "0.10.0"
tokio-rustls = "0.26.3"
webpki-roots = "1.0.2"
diesel = { version = "2.3.2", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
chrono = { version = "0.4.42", features = ["serde"] }
html2text = "0.15.5"
thiserror = "2.0.16"
async-trait = "0.1.89"
futures = "0.3.31"
regex = "1.11.3"
once_cell = "1.21.3"
base64 = "0.22.1"
mailparse = "0.16.1"

[dev-dependencies]
tempfile = "3.23.0"
