[package]
name = "pushkind-hedwig"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "send_email"

[[bin]]
name = "check_reply"

[dependencies]
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
tokio = { version = "1.48.0", features = ["full"] }
pushkind-common = { git = "https://github.com/pushkindt/pushkind-common.git", branch = "main", features = [
    "db",
    "zeromq",
] }
mail-send = { version = "0.5.2" }
env_logger = "0.11.8"
log = "0.4.29"
serde_json = "1.0.145"
async-imap = { version = "0.11.1", default-features = false, features = [
    "runtime-tokio",
] }
dotenvy = "0.15.7"
zmq = "0.10.0"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.4"
diesel = { version = "2.3.4", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
chrono = { version = "0.4.42", features = ["serde"] }
html2text = "0.16.5"
thiserror = "2.0.17"
async-trait = "0.1.89"
futures = "0.3.31"
regex = "1.12.2"
once_cell = "1.21.3"
base64 = "0.22.1"
mailparse = "0.16.1"
pushkind-emailer = { git = "https://github.com/pushkindt/pushkind-emailer.git", version = "0.1.0", features = [
    "data",
], default-features = false }
config = { version = "0.15.19", default-features = false, features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23.0"
